@@ -1,3 +1,8 @@
+2012-12-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* exult.cc: Reverting revision 7197 as it can sometimes cause the mouse to
+	  lock on the center of the screen. A better workaround for touchpad issues
+	  for now is to disable full-screen fast mouse.
+
 2012-12-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* keyactions.cc: Toggling fullscreen displays a timed popup asking if you
 	  want to keep the change or not. If yes, config is saved; if not, then full
